--- a/GitKraken/package.json
+++ b/GitKraken/package.json
@@ -6,7 +6,10 @@
     "rebuildInDocker": "node rebuildInDocker.js"
   },
   "dependencies": {
+    "@electron/get": "^1.13.1",
     "executive": "^1.6.3",
+    "extract-zip": "^2.0.1",
+    "fs-extra": "^10.0.0",
     "got": "^10.7.0"
   },
   "gitkrakenPrebuilts": {
