Support multiple linux operating systems
Dynamically load NodeGit prebuilts based on heuristic load order, fall over to other versions of NodeGit when a load fails. Only fail when all NodeGit prebuilts have been tried.

Adds all of the prebuilt capacity for creating new prebuilts based on target OS. Supports pushing and pulling of those prebuilts from an s3 bucket.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nodegit",
+  "name": "@axosoft/nodegit",
   "description": "Node.js libgit2 asynchronous native bindings",
   "version": "0.28.0-alpha.26",
   "homepage": "http://nodegit.org",
@@ -62,6 +62,7 @@
     "walk": "^2.3.9"
   },
   "binary": {
+    "package_name": "{module_name}-v0.28.0-alpha.26-{node_abi}-{platform}-{arch}.tar.gz",
     "module_name": "nodegit",
     "module_path": "./build/Release/",
     "host": "https://axonodegit.s3.amazonaws.com/nodegit/nodegit/"
