Revert "Use Debian 9 instead of Ubuntu 18 for OpenSSL 1.1.0"
This reverts commit 9a1ccd72713407df9a7bf7f379d31db71d87412b.

This was a mistake, the real issue was load order. We need to build on Ubuntu 18 due to Electron linking issues.

--- a/GitKraken/rebuild_docker_config.json
+++ b/GitKraken/rebuild_docker_config.json
@@ -6,7 +6,7 @@
     "image": "docker.axosoft.com/rebuild-nodegit:ubuntu-18-ssl-1.0.0",
     "patchedDistName": "ubuntu-18-ssl-10"
   },
-  "debian-9": {
-    "image": "docker.axosoft.com/rebuild-nodegit:debian-9"
+  "ubuntu-18-ssl-1.1.0": {
+    "image": "docker.axosoft.com/rebuild-nodegit:ubuntu-18-ssl-1.1.0"
   }
 }
