--- a/package.json
+++ b/package.json
@@ -82,7 +82,7 @@
     "lint": "jshint lib test/tests test/utils lifecycleScripts",
     "mergecov": "lcov-result-merger 'test/**/*.info' 'test/coverage/merged.lcov' && ./lcov-1.10/bin/genhtml test/coverage/merged.lcov --output-directory test/coverage/report",
     "mocha": "mocha --expose-gc test/runner test/tests --timeout 15000",
-    "mochaDebug": "mocha --expose-gc --debug-brk test/runner test/tests --timeout 15000",
+    "mochaDebug": "mocha --expose-gc --inspect-brk test/runner test/tests --timeout 15000",
     "postinstall": "node lifecycleScripts/postinstall",
     "prepublish": "npm run babel",
     "rebuild": "node generate && npm run babel && node-gyp configure build",
