--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@axosoft/nodegit",
   "description": "Node.js libgit2 asynchronous native bindings",
-  "version": "0.28.0-gktempalpha.20",
+  "version": "0.28.0-gktempalpha.20-electron17",
   "nodegitVersion": "0.28.0-gktempalpha.20",
   "homepage": "http://nodegit.org",
   "keywords": [
