--- a/GitKraken/rebuild_docker_config.json
+++ b/GitKraken/rebuild_docker_config.json
@@ -1,16 +1,16 @@
 {
   "ubuntu-18": {
-    "image": "docker.axosoft.com/rebuild-nodegit:ubuntu-18"
+    "image": "docker1.ci.gitkraken.com/rebuild-nodegit:ubuntu-18"
   },
   "ubuntu-18-ssl-static": {
-    "image": "docker.axosoft.com/rebuild-nodegit:ubuntu-18",
+    "image": "docker1.ci.gitkraken.com/rebuild-nodegit:ubuntu-18",
     "env": "-e NODEGIT_OPENSSL_STATIC_LINK=1"
   },
   "ubuntu-18-ssl-1.0.0": {
-    "image": "docker.axosoft.com/rebuild-nodegit:ubuntu-18-ssl-1.0.0",
+    "image": "docker1.ci.gitkraken.com/rebuild-nodegit:ubuntu-18-ssl-1.0.0",
     "patchedDistName": "ubuntu-18-ssl-10"
   },
   "ubuntu-18-ssl-1.1.0": {
-    "image": "docker.axosoft.com/rebuild-nodegit:ubuntu-18-ssl-1.1.0"
+    "image": "docker1.ci.gitkraken.com/rebuild-nodegit:ubuntu-18-ssl-1.1.0"
   }
 }
